<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_280sdp"
        android:layout_gravity="center"
        android:background="@drawable/background_dialog_noq"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/ic_image_noq"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/DNQTxt_Header"
                android:textColor="@color/DNQ_HeaderText"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:paddingLeft="@dimen/_22sdp"
                android:paddingRight="@dimen/_22sdp"
                android:text="@string/DNQTxt_Description"
                android:fontFamily="@font/lilita_one"
                android:textColor="@color/DNQ_DescriptionText"
                android:textSize="@dimen/_18ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:paddingLeft="@dimen/_18sdp"
            android:paddingRight="@dimen/_18sdp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/dialog_style_noq_back"
                android:onClick="onBackHistoryActivity"
                android:text="@string/DNQTxt_BtnBack"
                android:textAllCaps="false"
                android:textColor="@color/DNQ_TextBtn"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/dialog_style_noq_newq"
                android:onClick="onNewQuestion"
                android:text="@string/DNQTxt_BtnCreate"
                android:textAllCaps="false"
                android:textColor="@color/DNQ_TextBtn"
                android:textSize="@dimen/_12ssp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>